# imgc-rs

./: .gitignore  Cargo.toml  Dockerfile-debian  PGO_GUIDE.md  README.md  build-pgo.ps1  build-pgo.sh
.cargo/: config.toml
.github/workflows/: workflow.yaml
benches/: encoding.rs
examples/trouble/: image_id_155790.x-png  image_id_158973.pjpeg
src/: cli.rs  format.rs  main.rs  utils.rs
src/converter/: avif.rs  mod.rs  mozjpeg.rs  png.rs  webp.rs  webp_image.rs
tests/: integration_tests.rs
