[package]
name = "imgc"
version = "0.0.0-git"
edition = "2024"
authors = ["Duy NG <hi@tduyng.com>", "Daniel Gunzinger <daniel.gunzinger@posteo.de>"]
description = "A configurable and efficient batch image converter written in Rust."
license = "MIT"
documentation = "https://docs.rs/imgc"
homepage = "https://github.com/Gunzinger/imgc-rs"
repository = "https://github.com/Gunzinger/imgc-rs"
keywords = ["CLI", "image", "conversion", "webp", "avif"]
readme = "README.md"
categories = [
    "command-line-utilities",
    "multimedia::images",
    "multimedia::encoding",
]
include = [
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "/src/**/*.rs",
    "build.rs"
]
default-run = "imgc"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] } # 4.5.41 changes parser ordering; makes command ugly...
glob = "0.3.3"
ctrlc = "3.5.1"
#image = {version = "0.25.8", features = ["avif-native"] } # problematic on windows
image = {version = "0.25.8"}
rayon = "1.11.0"
webp = "0.3.1"
ravif = "0.12.0"
rgb = "0.8.52"
indicatif = {version = "0.18.2", features = ["rayon"]}
mozjpeg = "0.10.13"
jpeg-decoder = "0.3.2"
#bytesize = "2.1.0" # replaced by humansize
humansize = "2.1.3"

[build-dependencies]
cargo_metadata = "0.23.0"

[dev-dependencies]
tempfile = "3.10.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encoding"
harness = false

[profile.dev]
opt-level = 2
debug = "full"
lto = false
strip = false
codegen-units = 16

[profile.release]
opt-level = 3 # "z" can significantly reduce binary size
panic = "abort" # "unwind" for debugging
debug = "none"
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
lto = true
strip = true
codegen-units = 1 # 16 for debugging/fast build time; 1 for release builds (lowers binary size)

# PGO (Profile-Guided Optimization) profile for maximum performance
[profile.pgo]
inherits = "release"
opt-level = 3
lto = "fat"  # Use fat LTO for better optimization
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false
strip = true

[badges]
maintenance = { status = "actively-developed" }
